[workspace]
members = ["commons", "dlmm_interface"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-lang", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-client", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2"}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", package = "anchor-spl", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2"}

solana-sdk = "2.1.13"
spl-associated-token-account = "6.0.0"
solana-transaction-status = "2.1.13"
solana-account-decoder = "2.1.13"
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9.0"

serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.3.3"
bs58 = "0.5.0"
bytemuck = "1.13.1"

clap = "4.3.3"
shellexpand = "3.1.0"

env_logger = "0.9.0"
log = "0.4.17"

rust_decimal = "1.31.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.16"

hyper = "0.14.17"
routerify = "3"

tokio = "1.42.0"
futures-util = "0.3.0"
async-trait = "0.1.0"

anyhow = "1.0.82"

rand = "0.8.5"

chrono = "0.4.31"

ureq = "2.0.0"

itertools = "0.10.0"

commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
